--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="embedded">
+            <li class="project-item  active" data-filter-item data-category="embedded software">
               <a href="#">
 
                 <figure class="project-img">
@@ -577,7 +577,7 @@
 
                 <h3 class="project-title">Acceleration Sensor</h3>
 
-                <p class="project-category">Embedded</p>
+                <p class="project-category">Embedded Software</p>
 
               </a>
             </li>
@@ -600,7 +600,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="embedded">
+            <li class="project-item  active" data-filter-item data-category="embedded software">
               <a href="#">
 
                 <figure class="project-img">
@@ -613,7 +613,7 @@
 
                 <h3 class="project-title">Humidity Light Sensor</h3>
 
-                <p class="project-category">Embedded</p>
+                <p class="project-category">Embedded Software</p>
 
               </a>
             </li>
@@ -636,7 +636,7 @@
             </li>
           </ul>
 
-          <li class="project-item  active" data-filter-item data-category="embedded" id="project1">
+          <li class="project-item  active" data-filter-item data-category="embedded software" id="project1">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
@@ -728,9 +728,7 @@
             </section>
           </li>
           
-
-          
-          <li class="project-item  active" data-filter-item data-category="embedded" id="project3">
+          <li class="project-item  active" data-filter-item data-category="embedded software" id="project3">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
