--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Embedded</button>
+              <button data-filter-btn>Electrical</button>
             </li>
 
             <li class="filter-item">
@@ -523,7 +523,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Hardware</button>
+              <button data-filter-btn>Mechanical</button>
             </li>
 
           </ul>
@@ -547,7 +547,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Embedded</button>
+                <button data-select-item>Electrical</button>
               </li>
 
               <li class="select-item">
@@ -555,7 +555,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Hardware</button>
+                <button data-select-item>Mechanical</button>
               </li>
 
             </ul>
@@ -564,7 +564,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="embedded software">
+            <li class="project-item  active" data-filter-item data-category="electrical software">
               <a href="#">
 
                 <figure class="project-img">
@@ -577,12 +577,12 @@
 
                 <h3 class="project-title">Acceleration Sensor</h3>
 
-                <p class="project-category">Embedded Software</p>
+                <p class="project-category">Electrical Software</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="embedded">
+            <li class="project-item  active" data-filter-item data-category="electrical">
               <a href="#">
 
                 <figure class="project-img">
@@ -595,12 +595,12 @@
 
                 <h3 class="project-title">Timer PCB</h3>
 
-                <p class="project-category">Embedded</p>
+                <p class="project-category">Electrical</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="embedded software">
+            <li class="project-item  active" data-filter-item data-category="electrical software">
               <a href="#">
 
                 <figure class="project-img">
@@ -613,12 +613,12 @@
 
                 <h3 class="project-title">Humidity Light Sensor</h3>
 
-                <p class="project-category">Embedded Software</p>
+                <p class="project-category">Electrical Software</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="hardware">
+            <li class="project-item  active" data-filter-item data-category="mechanical">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -630,13 +630,13 @@
 
                 <h3 class="project-title">Creality Ender 6</h3>
 
-                <p class="project-category">Hardware</p>
+                <p class="project-category">Mechanical</p>
 
               </a>
             </li>
           </ul>
 
-          <li class="project-item  active" data-filter-item data-category="embedded software" id="project1">
+          <li class="project-item  active" data-filter-item data-category="electrical software" id="project1">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
@@ -681,7 +681,7 @@
             </section>
           </li>
 
-          <li class="project-item  active" data-filter-item data-category="embedded" id="project2">
+          <li class="project-item  active" data-filter-item data-category="electrical" id="project2">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
@@ -728,7 +728,7 @@
             </section>
           </li>
           
-          <li class="project-item  active" data-filter-item data-category="embedded software" id="project3">
+          <li class="project-item  active" data-filter-item data-category="electrical software" id="project3">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
@@ -773,7 +773,7 @@
           </li>
 
           
-          <li class="project-item  active" data-filter-item data-category="hardware" id="project4">
+          <li class="project-item  active" data-filter-item data-category="mechanical" id="project4">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
