--- a/index.html
+++ b/index.html
@@ -324,7 +324,29 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Plan Group VDC Electrical Designer</h4>
+
+              <span>Jan. 2025 – Apr. 2025</span>
+
+              <p class="timeline-text">
+                • Reviewed and modified electrical, mechanical, and technology construction drawings for over 50 projects 
+                using AutoCAD and Revit, ensuring accuracy to As-Built design standards.
+              </p>
+
+              <p class="timeline-text">
+                • Developed automation tools using AutoLISP that significantly streamlined the drafting process in AutoCAD, 
+                reducing manual input and saving +50 hours across multiple projects.
+              </p>
+
+              <p class="timeline-text">
+                • Designed Python-based software using PyMuPDF to automate the identification and marking of lighting fixture 
+                devices in lighting drawings, increasing efficiency and minimizing human error.
+              </p>
+              
+            </li>
+            
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Baja Sae Electrical Design Team Lead</h4>
