Updated info on webste, along with a readme file for github

--- a/index.html
+++ b/index.html
@@ -597,10 +597,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images1/Resevoir Simulation.jpeg" alt="Resevoir Simulation" loading="lazy">
+                  <img src="./assets/images1/Resevoir Simulation.jpeg" alt="Reservoir Simulation" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Resevoir Simulation</h3>
+                <h3 class="project-title">Reservoir Simulation</h3>
 
                 <p class="project-category">Electrical Software</p>
 
@@ -735,7 +735,7 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <h3 class="h3">Resevoir Simulation</h3>
+                <h3 class="h3">Reservoir Simulation</h3>
               </div>
               <ol class="timeline-list">
                 <li class="timeline-item">
@@ -745,7 +745,7 @@
                   </p>
                   <p class="timeline-text">
                     • The system can measure water level, display the percentage full, control water flow direction, simulate water pumping, monitor pump speed, indicate flow direction,
-                     and transmit real-time measurements to a computer through a UART commection.
+                     and transmit real-time measurements to a computer through a UART connection.
                   </p>
                 </li>
                 <li class="timeline-item">
@@ -772,7 +772,7 @@
               </ol>
             </section>
             <section class="photo-section">
-              <img src="./assets/images1/Resevoir Simulation.jpeg" height="200" alt="Resevoir Simulation" class="profile">
+              <img src="./assets/images1/Resevoir Simulation.jpeg" height="200" alt="Reservoir Simulation" class="profile">
               <img src="./assets/images1/Pinout.png" height="200" alt="Pinout" class="profile">
               <img src="./assets/images1/Resevoir Output.png" height="200" alt="Pinout" class="profile">
             </section>
@@ -882,10 +882,10 @@
                 <li class="timeline-item">
                   <h4 class="h4 timeline-item-title">What?</h4>
                   <p class="timeline-text">
-                    • Developed a functional prototype using an STM32 Nucleo board to analyze environmental data with light, temperature, and humidity sensors.
+                    • Developed a functional prototype for an environmental analyzer designed to collect ecological data that affect the surrounding plants and vegetation.
                   </p>
                   <p class="timeline-text">
-                    • Displayed data on an I2C LCD screen
+                    • Gardeners and plant-owners can easily access light, tempurature and humidity data on an LCD screen.
                   </p>
                 </li>
                 <li class="timeline-item">
