Updated ESP32 project images and added github buttons to projects

--- a/index.html
+++ b/index.html
@@ -144,13 +144,12 @@
         <section class="about-text">
           <p>
             I'm Aundre Jeganathan, a third-year Electrical Engineering student at the University of Waterloo with 
-            a passion for robotics, programming, and problem-solving. Specializing in Robotics, I have developed
-            skills in hardware circuitry, embedded programming, and project management, working on projects like a
-            gesture-controlled robot using Raspberry Pi 4 and Arduino. Alongside my technical work, I have actively
-            contributed to my community as a member of the Teen Council and a volunteer at SAAAC (South Asian
-            Autism Awareness Centre), where I lead activities for individuals with autism. I am driven by the
-            desire to apply my engineering skills to create innovative solutions and make a meaningful impact
-            in both technology and the community.
+            a passion for robotics, programming, and problem-solving. I have developed skills in hardware circuitry,
+            embedded programming, robotics and project management, working on projects like a gesture-controlled
+            robot using Raspberry Pi 4 and Arduino. Alongside my technical work, I have actively contributed to my
+            community as a member of the Teen Council and a volunteer at SAAAC (South Asian Autism Awareness Centre), 
+            where I lead activities for individuals with autism. I am driven by the desire to apply my engineering 
+            skills to create innovative solutions and make a meaningful impact in both technology and the community.
           </p>
 
         </section>
@@ -162,25 +161,9 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Areas of Expertise</h3>
 
           <ul class="service-list">
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images1/processor.png" alt="processor" width="50">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Embedded Systems</h4>
-
-                <p class="service-item-text">
-                  Experience writing high-quality code for various microcontrollers.
-                </p>
-              </div>
-
-            </li>
 
             <li class="service-item">
 
@@ -192,7 +175,23 @@
                 <h4 class="h4 service-item-title">Electronics</h4>
 
                 <p class="service-item-text">
-                  Proficient skills in designing, wiring and soldering circuits and PCBs.
+                  PCB Design, Soldering,  Altium, KiCad, LTSpice, Cadence, Proteus, Raspberry Pi, Arduino, Oscilloscope, RF
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images1/processor.png" alt="processor" width="50">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Embedded Systems</h4>
+
+                <p class="service-item-text">
+                  Verilog, VHDL, FPGA, ESP32, JTAG, Assembly, SPI, I2C, UART, CAN, USB, Bluetooth, Wifi, LoRa, AMD Vivado
                 </p>
               </div>
 
@@ -208,7 +207,7 @@
                 <h4 class="h4 service-item-title">Software</h4>
 
                 <p class="service-item-text">
-                  Adept in programming, showcasing mastery across various languages.
+                  C/C++, Python, Java, Perl, Linux, Bash, Shell, Git, VS Code, Putty
                 </p>
               </div>
 
@@ -221,10 +220,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mechatronics</h4>
+                <h4 class="h4 service-item-title">Robotics</h4>
 
                 <p class="service-item-text">
-                  Aquired skills with robotics, mechanics, and sensor technology.
+                  SolidWorks, AutoCAD, Onshape, MATLAB, Simulink
                 </p>
               </div>
 
@@ -568,7 +567,7 @@
           <ul class="project-list">
 
             <li class="project-item active" data-filter-item data-category="electrical">
-              <a href="https://github.com/A2J2123/ESP32-Breakout-Board.git" target="_blank">
+              <a>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -583,7 +582,7 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="electrical">
-              <a href="https://github.com/A2J2123/LCOConverter-PCB.git" target="_blank">
+              <a>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -598,7 +597,7 @@
             </li>
             
             <li class="project-item active" data-filter-item data-category="software">
-              <a href="https://github.com/A2J2123/SPICE-Netlist-Linter" target="_blank">
+              <a>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -613,8 +612,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="software">
-              <a href="https://github.com/A2J2123/MATLAB-Lead-Lag-Compensator-Design.git">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -631,8 +629,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="electrical">
-              <a href="#">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -649,8 +646,7 @@
             </li>
             
             <li class="project-item  active" data-filter-item data-category="electrical software">
-              <a href="https://github.com/A2J2123/ECE-298-Reservoir-Simulator.git">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -667,8 +663,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="electrical software">
-              <a href="https://github.com/A2J2123/Baja-SAE-Accelerometer-Code.git">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -685,8 +680,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="electrical">
-              <a href="#">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -703,8 +697,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="electrical software">
-              <a href="#">
-
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -721,7 +714,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="electrical">
-              <a href="#">
+              <a>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -738,19 +731,15 @@
             </li>
           </ul>
 
-          <p class="timeline-text">
-            *Right-click on project titles and select "Open link in new tab" to open project Github
-          </p>
-          <br>
-
           <li class="project-item active" data-filter-item data-category="electrical" id="project1">
             <section class="timeline">
               <div class="title-wrapper">
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/ESP32-Breakout-Board" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">ESP32 Breakout Board</h3>
+                <h3 class="h3">ESP32 Breakout Board</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/ESP32-Breakout-Board" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
               </div>
               <ol class="timeline-list">
@@ -796,8 +785,9 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/LCOConverter-PCB" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">LCOConverter PCB</h3>
+                <h3 class="h3">LCOConverter PCB</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/LCOConverter-PCB" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
 
               </div>
@@ -843,8 +833,9 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/SPICE-Netlist-Linter" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">SPICE Netlist Linter</h3>
+                <h3 class="h3">SPICE Netlist Linter</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/SPICE-Netlist-Linter" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
               </div>
               <ol class="timeline-list">
@@ -889,8 +880,9 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/MATLAB-Lead-Lag-Compensator-Design" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">MATLAB Lead-Lag Compensator Design</h3>
+                <h3 class="h3">MATLAB Lead-Lag Compensator Design</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/MATLAB-Lead-Lag-Compensator-Design" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
               </div>
               <ol class="timeline-list">
@@ -986,8 +978,9 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/ECE-298-Reservoir-Simulator" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">Reservoir Simulation</h3>
+                <h3 class="h3">Reservoir Simulation</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/ECE-298-Reservoir-Simulator" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
               </div>
               <ol class="timeline-list">
@@ -1037,8 +1030,9 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/Baja-SAE-Accelerometer-Code" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">Acceleration Sensor</h3>
+                <h3 class="h3">Acceleration Sensor</h3>
+                <a class="repo-btn" href="https://github.com/A2J2123/Baja-SAE-Accelerometer-Code" target="_blank" rel="noopener">
+                    <ion-icon name="logo-github" role="img" class="md hydrated" aria-label="logo github"><template shadowrootmode="open"><div class="icon-inner"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Logo Github</title><path d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"></path></svg></div></template></ion-icon><span>GitHub</span>
                 </a>
               </div>
               <ol class="timeline-list">
@@ -1131,9 +1125,7 @@
                 <div class="icon-box">
                   <img src="./assets/images1/idea.png" alt="project" width="25">
                 </div>
-                <a href="https://github.com/A2J2123/ECE-198-Environmental-Scanner" target="_blank" rel="noopener noreferrer" title="View on GitHub" style="margin-left:8px;">
-                  <h3 class="h3">Humidity Light Sensor</h3>
-                </a>
+                <h3 class="h3">Humidity Light Sensor</h3>
               </div>
               <ol class="timeline-list">
                 <li class="timeline-item">
